--- a/config/recipes/templates/nginx_unicorn.erb
+++ b/config/recipes/templates/nginx_unicorn.erb
@@ -4,7 +4,7 @@ upstream unicorn {
 
 server {
   listen 80 default deferred;
-  # server_name example.com;
+  server_name pagestry.notegather.com;
   root <%= current_path %>/public;
 
   location ^~ /assets/ {
